# borrar2

./: .gitignore  README.md
include/: App.hh  Board.hh  Cell.hh  GameBoardPanel.hh  MainFrame.hh  MenuFrame.hh  MiniMax.hh  Movement.hh  NewGameDialog.hh  Player.hh  PlayerFactory.hh  SelectionFrame.hh
src/: App.cpp  Board.cc  CMakeLists.txt  Cell.cc  GameBoardPanel.cpp  MainFrame.cpp  MenuFrame.cpp  MiniMax.cc  Movement.cc  NewGameDialog.cpp  Player.cc  PlayerFactory.cc  SelectionFrame.cpp  main.cc
tests/: CMakeLists.txt  unit_testing-classes.cc
